# llm-robot-algo-bench

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  GITHUB_ABOUT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: smoke.yml
cli/: __init__.py  main.py
data/control/: ground_truth.json  scenario.json
data/gnss/: ground_truth.json  sample.nmea
data/lidar/: ground_truth.json  points.npy
data/planning/: ground_truth.json  scenario.json
data/vision/: ground_truth.json
docs/: BENCH_JUDGE.md  CURSOR.md  OPENCODE.md  OPENCODE_BENCH.md  PLAN.md
docs/benchmarks/: SUMMARY.md  baseline.json  composer-2-fast.json  opencode-go_deepseek-v4-pro.json  opencode-go_kimi-k2.6.json  opencode-go_qwen3.6-plus.json  opencode_provider_smoke.json  opus-4.7.json
evaluator/: __init__.py  common.py  control.py  gnss.py  lidar.py  planning.py  vision.py
prompts/: opencode_bench_gnss.md
results/: leaderboard.csv  leaderboard.md
runner/: __init__.py  executor.py  model_registry.py
scripts/: bench_opencode_smoke.sh  gen_benchmark_summary.py  generate_opencode_models.py  refresh_benchmark_docs.py  refresh_opencode_provider_smoke.py
tasks/control/: __init__.py  baseline.py
tasks/gnss/: __init__.py  baseline.py  nmea.py
tasks/lidar/: __init__.py  baseline.py  io.py
tasks/planning/: __init__.py  baseline.py
tasks/vision/: __init__.py  (+1 more)
utils/: __init__.py  bench_bars.py  code_complexity.py  cursor_models.py  quality_gates.py  task_spec.py  timing.py
(+1 files in other folders)
