[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-robot-algo-bench"
version = "0.1.0"
description = "LLM生成ロボティクスアルゴリズム向けローカルベンチマーク"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "opencv-python>=4.8",
  "matplotlib>=3.7",
]

[project.scripts]
bench = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli*", "tasks*", "evaluator*", "runner*", "utils*"]
